01-eks-gatekeeper/policies_backup/c-disallow-hostpath.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sDisallowHostPath
metadata:
  name: disallow-hostpath
spec:
  enforcementAction: deny
