01-eks-gatekeeper/policies_backup/c-no-privileged-containers.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sPrivilegedContainer
metadata:
  name: deny-privileged
spec:
  enforcementAction: deny
