01-eks-gatekeeper/policies_backup/c-require-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sResourceLimits
metadata:
  name: require-resource-limits
spec:
  enforcementAction: deny
