01-eks-gatekeeper/policies_backup/c-require-runasnonroot.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sRunAsNonRoot
metadata:
  name: require-runasnonroot
spec:
  enforcementAction: deny
