01-eks-gatekeeper/policies_backup/ct-require-resources.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sresourcelimits
spec:
  crd:
    spec:
      names:
        kind: K8sResourceLimits
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sresourcelimits
      violation[{"msg": msg}] {
        input.review.kind.kind == "Pod"
        c := input.review.object.spec.containers[_]
        not has_limits(c)
        msg := sprintf("container must set resources.limits: %v", [c.name])
      }
      has_limits(c) {
        c.resources.limits.cpu
        c.resources.limits.memory
      }
